introduce PropertyDefinition as the main holder for defining a table columns meta data