@@ -5,7 +5,7 @@
     <parent>
         <artifactId>sqlg-mssqlserver-parent</artifactId>
         <groupId>org.umlg</groupId>
-        <version>2.1.6-SNAPSHOT</version>
+        <version>3.0.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -18,8 +18,15 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-Xmx8192m -XX:+UseCompressedOops</argLine>
-                    <argLine>-Dbuild.dir=${project.build.directory}</argLine>
+                    <argLine>
+                        --add-opens=java.base/java.io=ALL-UNNAMED
+                        --add-opens=java.base/java.time=ALL-UNNAMED
+                        --add-opens=java.base/java.time.zone=ALL-UNNAMED
+                        --add-opens=java.base/java.lang=ALL-UNNAMED
+                        --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED
+                        -Xmx8192m -XX:+UseCompressedOops
+                        -Dbuild.dir=${project.build.directory}
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
